[package]
name = "mcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.58"
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.1.0"
clap = { version = "3.2.12", features = ["derive"] }
sha1 = { version = "0.10.1", features = ["std"] }
async-trait = "0.1.56"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["full"] }
dirs = "4.0.0"
scopeguard = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.5"
hex-literal = "0.3.4"
hex = "0.4.3"
